--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@ body{
     margin: 0px;
     color: white;
     background-color: black;
+    text-align: center;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
