--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     color: white;
-    background-color: darkblue;
+    background-color: black;
     text-align: center;
 }
 
