--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
-    color: yellow;
-    background-color: black;
+    color: white;
+    background-color: darkblue;
     text-align: center;
 }
 
