--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
-    color: red;
-    background-color: darkblue;
+    color: gray;
+    background-color: pink;
     text-align: center;
 }
 
